feat: modifying some ui

--- a/luasrc/view/themes/argon/footer.htm
+++ b/luasrc/view/themes/argon/footer.htm
@@ -3,17 +3,18 @@
 
 	luci-theme-argon
 	Copyright 2020 Jerrykuku <jerrykuku@qq.com>
+	Modded by 1121gbps <contact@hiniature.xyz>
 
 	Have a bug? Please create an issue here on GitHub!
 	https://github.com/jerrykuku/luci-theme-argon/issues
 
-	luci-theme-material: 
+	luci-theme-material:
 	Copyright 2015 Lutty Yang <lutty@wcan.in>
-	
-	Agron Theme
-	https://demos.creative-tim.com/argon-dashboard/index.html 
 
-	Licensed to the public under the Apache License 2.0 
+	Argon Theme
+	https://demos.creative-tim.com/argon-dashboard/index.html
+
+	Licensed to the public under the Apache License 2.0
 -%>
 
 <% local ver = require "luci.version" %>
@@ -24,7 +25,7 @@
 
     <span class="footer-separator">|</span>
 
-    <a href="https://github.com/jerrykuku/luci-theme-argon" target="_blank">ArgonTheme <%# vPKG_VERSION %></a>
+    <a href="https://github.com/1121gbps/luci-theme-argon" target="_blank">ArgonTheme Modded <%# vPKG_VERSION %></a>
 
     <span class="footer-separator">|</span>
 
