--- a/luasrc/view/themes/argon/footer_login.htm
+++ b/luasrc/view/themes/argon/footer_login.htm
@@ -3,6 +3,7 @@
 
 	luci-theme-argon
 	Copyright 2020 Jerrykuku <jerrykuku@qq.com>
+	Modded by 1121gbps <contact@hiniature.xyz>
 
 	Have a bug? Please create an issue here on GitHub!
 	https://github.com/jerrykuku/luci-theme-argon/issues
@@ -22,7 +23,7 @@
 <footer style="text-wrap: auto">
 	<div>
 		<a class="luci-link" href="https://github.com/openwrt/luci" target="_blank">Powered by <%= ver.luciname %> (<%= ver.luciversion %>)</a> |
-						<a href="https://github.com/jerrykuku/luci-theme-argon" target="_blank">ArgonTheme <%# vPKG_VERSION %></a> |
+						<a href="https://github.com/1121gbps/luci-theme-argon" target="_blank">ArgonTheme Modded <%# vPKG_VERSION %></a> |
 						<%= ver.distversion %>
 	</div>
 </footer>
