--- a/luasrc/view/themes/argon/header_login.htm
+++ b/luasrc/view/themes/argon/header_login.htm
@@ -3,6 +3,7 @@
 
 	luci-theme-argon
 	Copyright 2020 Jerrykuku <jerrykuku@qq.com>
+	Modded by 1121gbps <contact@hiniature.xyz>
 
 	Have a bug? Please create an issue here on GitHub!
 	https://github.com/jerrykuku/luci-theme-argon/issues
