--- a/luasrc/view/themes/argon/footer.htm
+++ b/luasrc/view/themes/argon/footer.htm
@@ -50,5 +50,7 @@
 	})
 </script>
 <script type="text/javascript">L.require('menu-argon')</script>
+<div id="tempcpu"></div>
+<div id="cpuusage"></div>
 </body>
 </html>
